Fix z-index of managed preferences banner.
Also, remove manually adjusting the vertical position of the subpage backdrop, as that's done via z-index now as well.

BUG=77791
TEST=no managed prefs banner ugliness


Review URL: http://codereview.chromium.org/8467029

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@110060 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: a525757d698413d928ad5790d7ce1e25eb30b2a1

--- a/chrome/browser/resources/options/options_page.css
+++ b/chrome/browser/resources/options/options_page.css
@@ -233,7 +233,9 @@ html[dir='rtl'] .action-area {
   width: 100%;
   margin: 0;
   padding: 0;
+  position: relative;
   vertical-align: middle;
+  z-index: 11;
 }
 
 .managed-prefs-banner.clickable:active {
